gunit test all exclude paging&deleting integration tests: in the beginning

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,10 @@ integration:
       name: ${USER_SERVICE_NAME:java-user-service}
       url: http://${USER_SERVICE_HOST:localhost}:${USER_SERVICE_PORT:8100}
       context-path: ${USER_SERVICE_PATH:}
+    mediaService:
+      name: ${MEDIA_SERVICE_NAME:media-service}
+      url: http://${MEDIA_SERVICE_HOST:localhost}:${SERVICE_PORT:8080}
+      context-path: ${MEDIA_SERVICE_PATH:/media-service-sec}
 
 storage:
   root:
